testsuite/bad/array07.jl
int main(){
  int[] x = new int[10];
  int y = x.hi;
  return 0;
}